--- a/index.html
+++ b/index.html
@@ -1,11 +1,123 @@
-<!DOCTYPE html>
 <html>
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Tabs Example</title>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0/css/bootstrap.min.css"
+        rel="stylesheet" />
+    <link href="https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap5.min.css" rel="stylesheet" />
+    <script src="jquery-3.5.1.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.13.1/js/dataTables.bootstrap5.min.js"></script>
+    <script src="training.js"></script>
+    <script src="lesson_index.js"></script>
+
+    <style>
+        #headerCenter {
+            text-align: center;
+        }
+
+        #headerRight {
+            text-align: right;
+        }
+
+        #cellRight_targetFTP {
+            text-align: right;
+            color: #000021;
+            font-weight: bold;
+        }
+
+        #cellRight_nonFTP {
+            text-align: right;
+            color: #D9D9E0;
+            font-weight: bold;
+        }
+
+        .Z3 {
+            background-color: #FCD549 !important;
+            ;
+        }
+
+        .Z4 {
+            background-color: #FC9C49 !important;
+            ;
+        }
+
+        .Z5 {
+            background-color: #E34074 !important;
+            ;
+        }
+    </style>
+</head>
+
+
+
 <body>
 
-<h1>My First Heading</h1>
+    課表選擇:
+    <select name="Lesson" id="Lesson">
+        <option value="">請選擇</option>
+        <option value="330">330</option>
+        <option value="325">325</option>
+        <option value="320">320</option>
+        <option value="315">315</option>
+        <option value="310">310</option>
+        <option value="305">305</option>
+        <option value="300">300</option>
+    </select>
 
-<p>My first paragraph.</p>
 
-</body>
+    距離:
+    <select name="Distance" id="Distance">
+        <option value="1k">1k</option>
+        <option value="300m">300m</option>
+        <option value="400m">400m</option>
+    </select>
+
+    <br /><br />
+    Week:
+    <select name="Week" id="Week">
+        <option value="01">1</option>
+        <option value="02">2</option>
+        <option value="03">3</option>
+        <option value="04">4</option>
+        <option value="05">5</option>
+        <option value="06">6</option>
+        <option value="07">7</option>
+        <option value="08">8</option>
+        <option value="09">9</option>
+        <option value="10">10</option>
+
+        <option value="11">11</option>
+        <option value="12">12</option>
+        <option value="13">13</option>
+        <option value="14">14</option>
+        <option value="15">15</option>
+        <option value="16">16</option>
+        <option value="17">17</option>
+        <option value="18">18</option>
+    </select>
+
+
+    <img src="img/01.jpg" id="imgTraining" />
+    <br /><br />
+
+    <table id="ftpZoneTable" class="table table-striped" style="width:30%">
+        <thead class="header">
+            <tr>
+                <th>Type</th>
+                <th>速度</th>
+            </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+        <tfoot>
+            <tr>
+
+            </tr>
+        </tfoot>
+    </table>
+
 </html>
-
