--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             <tr>
                 <th>Type</th>
                 <th>速度</th>
+				<th>課表總時</th>
             </tr>
         </thead>
         <tbody>
