--- a/index.html
+++ b/index.html
@@ -100,9 +100,8 @@
     </select>
 
 
-    <img src="img/01.jpg" id="imgTraining" />
-    <br /><br />
-
+    <img src="img/01.jpg" id="imgTraining" />    
+	<br /><br />
     <table id="ftpZoneTable" class="table table-striped" style="width:30%">
         <thead class="header">
             <tr>
@@ -120,5 +119,9 @@
             </tr>
         </tfoot>
     </table>
+	
+	<br /><br />
+
+	<h3 style="color:red">間歇跑 , Tempo Run , 長跑  <br/><br/>需要前置 35分鐘 <br/><br/>(暖身2K 12.5min , 馬克操10min , 緩和2K 12.5min) </h3>
 
 </html>
